-- #############################################################################
-- #
-- #  Relative Weight CLI - Database Schema (SQLite)
-- #
-- #############################################################################

-- SQLite has no schemas, sequences, enums or native timestamp/UUID types:
--   * ids use INTEGER PRIMARY KEY AUTOINCREMENT (ids are never reused)
--   * timestamps are ISO-8601 UTC text, e.g. 2026-01-31T12:00:00.000Z,
--     so they sort and compare correctly as strings
--   * UUIDs are random v4 strings generated by the column default
--   * enums are TEXT with a CHECK constraint
-- Foreign keys are enforced (the app enables PRAGMA foreign_keys). There is no
-- ON DELETE CASCADE; cascading deletes are handled in application code.

-- Marks the file as a rewelo database ("RWLO") at schema version 5;
-- see src/db/migrate.ts.
PRAGMA application_id = 1381452879;
PRAGMA user_version = 5;

-- =============================================================================
--  1. PROJECTS
-- =============================================================================

CREATE TABLE projects (
    id           INTEGER PRIMARY KEY AUTOINCREMENT,
    project_uuid TEXT NOT NULL UNIQUE DEFAULT (
        lower(hex(randomblob(4))) || '-' || lower(hex(randomblob(2))) || '-4' ||
        substr(lower(hex(randomblob(2))), 2) || '-' ||
        substr('89ab', 1 + (abs(random()) % 4), 1) ||
        substr(lower(hex(randomblob(2))), 2) || '-' || lower(hex(randomblob(6)))
    ),
    name         TEXT NOT NULL UNIQUE,
    created_at   TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now'))
);

-- =============================================================================
--  2. TICKETS
-- =============================================================================

CREATE TABLE tickets (
    id          INTEGER PRIMARY KEY AUTOINCREMENT,
    ticket_uuid TEXT NOT NULL UNIQUE DEFAULT (
        lower(hex(randomblob(4))) || '-' || lower(hex(randomblob(2))) || '-4' ||
        substr(lower(hex(randomblob(2))), 2) || '-' ||
        substr('89ab', 1 + (abs(random()) % 4), 1) ||
        substr(lower(hex(randomblob(2))), 2) || '-' || lower(hex(randomblob(6)))
    ),
    project_id  INTEGER NOT NULL REFERENCES projects(id),
    title       TEXT NOT NULL,
    description TEXT,
    benefit     INTEGER NOT NULL DEFAULT 1 CHECK (benefit  IN (1, 2, 3, 5, 8, 13, 21)),
    penalty     INTEGER NOT NULL DEFAULT 1 CHECK (penalty  IN (1, 2, 3, 5, 8, 13, 21)),
    estimate    INTEGER NOT NULL DEFAULT 1 CHECK (estimate IN (1, 2, 3, 5, 8, 13, 21)),
    risk        INTEGER NOT NULL DEFAULT 1 CHECK (risk     IN (1, 2, 3, 5, 8, 13, 21)),
    created_at  TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now')),
    updated_at  TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now'))
);

-- =============================================================================
--  3. TAGS
-- =============================================================================

CREATE TABLE tags (
    id         INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL REFERENCES projects(id),
    prefix     TEXT NOT NULL,
    value      TEXT NOT NULL,
    created_at TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now')),
    updated_at TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now')),

    UNIQUE (project_id, prefix, value)
);

CREATE TABLE tag_revisions (
    id         INTEGER PRIMARY KEY AUTOINCREMENT,
    tag_id     INTEGER NOT NULL,
    prefix     TEXT NOT NULL,
    value      TEXT NOT NULL,
    revised_at TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now'))
);

CREATE TABLE ticket_tags (
    ticket_id   INTEGER NOT NULL,
    tag_id      INTEGER NOT NULL,
    assigned_at TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now')),

    PRIMARY KEY (ticket_id, tag_id)
);

-- =============================================================================
--  4. TICKET TAG CHANGES (audit log)
-- =============================================================================

-- prefix and value record the tag as it was named at the time of the
-- change, so renaming a tag later does not rewrite the history.
CREATE TABLE ticket_tag_changes (
    id         INTEGER PRIMARY KEY AUTOINCREMENT,
    ticket_id  INTEGER NOT NULL,
    tag_id     INTEGER NOT NULL,
    prefix     TEXT NOT NULL,
    value      TEXT NOT NULL,
    action     TEXT NOT NULL CHECK (action IN ('added', 'removed')),
    changed_at TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now'))
);

-- =============================================================================
--  5. TICKET REVISIONS (content snapshot history)
-- =============================================================================

CREATE TABLE ticket_revisions (
    id          INTEGER PRIMARY KEY AUTOINCREMENT,
    ticket_id   INTEGER NOT NULL,
    title       TEXT NOT NULL,
    description TEXT,
    benefit     INTEGER NOT NULL CHECK (benefit  IN (1, 2, 3, 5, 8, 13, 21)),
    penalty     INTEGER NOT NULL CHECK (penalty  IN (1, 2, 3, 5, 8, 13, 21)),
    estimate    INTEGER NOT NULL CHECK (estimate IN (1, 2, 3, 5, 8, 13, 21)),
    risk        INTEGER NOT NULL CHECK (risk     IN (1, 2, 3, 5, 8, 13, 21)),
    tags        TEXT NOT NULL CHECK (json_valid(tags)),
    revised_at  TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now'))
);

-- =============================================================================
--  6. WEIGHT CONFIGURATION (per project)
-- =============================================================================

CREATE TABLE weight_configs (
    project_id INTEGER NOT NULL UNIQUE REFERENCES projects(id),
    w1         REAL NOT NULL DEFAULT 1.5 CHECK (w1 >= 0),
    w2         REAL NOT NULL DEFAULT 1.5 CHECK (w2 >= 0),
    w3         REAL NOT NULL DEFAULT 1.5 CHECK (w3 >= 0),
    w4         REAL NOT NULL DEFAULT 1.5 CHECK (w4 >= 0)
);

-- =============================================================================
--  7. TICKET RELATIONS (bidirectional, peer-level)
-- =============================================================================

CREATE TABLE ticket_relations (
    id            INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id    INTEGER NOT NULL REFERENCES projects(id),
    source_id     INTEGER NOT NULL,
    target_id     INTEGER NOT NULL,
    relation_type TEXT NOT NULL,
    created_at    TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now')),

    UNIQUE (project_id, source_id, target_id, relation_type)
);

-- =============================================================================
--  8. TICKET DELETIONS (so diffs can report deleted tickets)
-- =============================================================================

CREATE TABLE ticket_deletions (
    id         INTEGER PRIMARY KEY AUTOINCREMENT,
    project_id INTEGER NOT NULL REFERENCES projects(id),
    ticket_id  INTEGER NOT NULL,
    title      TEXT NOT NULL,
    deleted_at TEXT NOT NULL DEFAULT (strftime('%Y-%m-%dT%H:%M:%fZ', 'now')),
    -- When the deleted ticket was created (NULL for deletions before schema 5)
    created_at TEXT
);

-- =============================================================================
--  9. EVENT ORDER (the order history rows were written in)
-- =============================================================================

-- Timestamps have millisecond resolution, and ids of different tables can't
-- be compared, so the event log needs this to order events written in the
-- same millisecond. Filled by triggers; rows are removed with their source row.
CREATE TABLE IF NOT EXISTS event_order (
    seq    INTEGER PRIMARY KEY AUTOINCREMENT,
    source TEXT NOT NULL CHECK (source IN ('ticket', 'revision', 'tag_change', 'deletion')),
    row_id INTEGER NOT NULL,
    UNIQUE (source, row_id)
);
CREATE TRIGGER IF NOT EXISTS tickets_event_order_insert AFTER INSERT ON tickets
BEGIN INSERT INTO event_order (source, row_id) VALUES ('ticket', NEW.id); END;
CREATE TRIGGER IF NOT EXISTS tickets_event_order_delete AFTER DELETE ON tickets
BEGIN DELETE FROM event_order WHERE source = 'ticket' AND row_id = OLD.id; END;
CREATE TRIGGER IF NOT EXISTS ticket_revisions_event_order_insert AFTER INSERT ON ticket_revisions
BEGIN INSERT INTO event_order (source, row_id) VALUES ('revision', NEW.id); END;
CREATE TRIGGER IF NOT EXISTS ticket_revisions_event_order_delete AFTER DELETE ON ticket_revisions
BEGIN DELETE FROM event_order WHERE source = 'revision' AND row_id = OLD.id; END;
CREATE TRIGGER IF NOT EXISTS ticket_tag_changes_event_order_insert AFTER INSERT ON ticket_tag_changes
BEGIN INSERT INTO event_order (source, row_id) VALUES ('tag_change', NEW.id); END;
CREATE TRIGGER IF NOT EXISTS ticket_tag_changes_event_order_delete AFTER DELETE ON ticket_tag_changes
BEGIN DELETE FROM event_order WHERE source = 'tag_change' AND row_id = OLD.id; END;
CREATE TRIGGER IF NOT EXISTS ticket_deletions_event_order_insert AFTER INSERT ON ticket_deletions
BEGIN INSERT INTO event_order (source, row_id) VALUES ('deletion', NEW.id); END;
CREATE TRIGGER IF NOT EXISTS ticket_deletions_event_order_delete AFTER DELETE ON ticket_deletions
BEGIN DELETE FROM event_order WHERE source = 'deletion' AND row_id = OLD.id; END;

-- #############################################################################
-- #  End of Schema Definition
-- #############################################################################
