Project RelativeWeightCLI {
  database_type: 'SQLite'
  Note: 'Relative Weight CLI - prioritization tool using agile Fibonacci scoring'
}

Table projects {
  id integer [pk, default: `nextval('rw.projects_id_seq')`]
  project_uuid uuid [unique, not null, default: `gen_random_uuid()`]
  name text [unique, not null]
  created_at timestamptz [not null, default: `now()`]

  Note: 'Top-level grouping. Each project has its own set of tickets.'
}

Table tickets {
  id bigint [pk, default: `nextval('rw.tickets_id_seq')`]
  ticket_uuid uuid [unique, not null, default: `gen_random_uuid()`]
  project_id integer [not null, ref: > projects.id]
  title text [not null]
  description text
  benefit smallint [not null, default: 1, note: 'CHECK IN (1,2,3,5,8,13,21)']
  penalty smallint [not null, default: 1, note: 'CHECK IN (1,2,3,5,8,13,21)']
  estimate smallint [not null, default: 1, note: 'CHECK IN (1,2,3,5,8,13,21)']
  risk smallint [not null, default: 1, note: 'CHECK IN (1,2,3,5,8,13,21)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Stories/tickets scored with relative weight dimensions (B, P, E, R).'
}

Table tags {
  id integer [pk, default: `nextval('rw.tags_id_seq')`]
  project_id integer [not null, ref: > projects.id]
  prefix text [not null, note: 'e.g. state, feature, team']
  value text [not null, note: 'e.g. backlog, wip, done, foo']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (project_id, prefix, value) [unique]
  }

  Note: 'Reusable labels scoped to a project. prefix:value pairs like state:backlog, feature:foo.'
}

Table tag_revisions {
  id bigint [pk, default: `nextval('rw.tag_revisions_id_seq')`]
  tag_id integer [not null, ref: > tags.id]
  prefix text [not null]
  value text [not null]
  revised_at timestamptz [not null, default: `now()`]

  indexes {
    (tag_id, revised_at)
  }

  Note: 'Snapshot of tag content before each change.'
}

Table ticket_tags {
  ticket_id bigint [not null, ref: > tickets.id]
  tag_id integer [not null, ref: > tags.id]
  assigned_at timestamptz [not null, default: `now()`]

  indexes {
    (ticket_id, tag_id) [pk]
  }

  Note: 'Current tags assigned to a ticket.'
}

Enum tag_action {
  added
  removed
}

Table ticket_tag_changes {
  id bigint [pk, default: `nextval('rw.ticket_tag_changes_id_seq')`]
  ticket_id bigint [not null, ref: > tickets.id]
  tag_id integer [not null, ref: > tags.id]
  prefix varchar(50) [not null, note: 'tag prefix at the time of the change']
  value varchar(100) [not null, note: 'tag value at the time of the change']
  action tag_action [not null]
  changed_at timestamptz [not null, default: `now()`]

  indexes {
    (ticket_id, changed_at)
    (tag_id, changed_at)
  }

  Note: 'Audit log of every tag assignment/removal on a ticket.'
}

Table ticket_revisions {
  id bigint [pk, default: `nextval('rw.ticket_revisions_id_seq')`]
  ticket_id bigint [not null, ref: > tickets.id]
  title text [not null]
  description text
  benefit smallint [not null, note: 'CHECK IN (1,2,3,5,8,13,21)']
  penalty smallint [not null, note: 'CHECK IN (1,2,3,5,8,13,21)']
  estimate smallint [not null, note: 'CHECK IN (1,2,3,5,8,13,21)']
  risk smallint [not null, note: 'CHECK IN (1,2,3,5,8,13,21)']
  tags json [not null, note: 'Snapshot of tags as [{prefix, value}] at time of revision']
  revised_at timestamptz [not null, default: `now()`]

  indexes {
    (ticket_id, revised_at)
  }

  Note: 'Snapshot of ticket content and tags before each change. Enables full revision history.'
}

Table ticket_deletions {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > projects.id]
  ticket_id bigint [not null, note: 'Id of the deleted ticket (no FK: the ticket is gone)']
  title text [not null]
  deleted_at text [not null, note: 'ISO-8601 UTC']
  created_at text [note: 'When the deleted ticket was created; NULL before schema 5']

  Note: 'Record of deleted tickets so project diff can report deletions.'
}

Table event_order {
  seq bigint [pk, increment]
  source text [not null, note: 'ticket, revision, tag_change or deletion']
  row_id bigint [not null, note: 'Id of the row in the source table']

  indexes {
    (source, row_id) [unique]
  }

  Note: 'The order history rows were written in, filled by triggers. Breaks timestamp ties (ms resolution) in the event log.'
}
